fix(Window): set z-index for resize button

--- a/src/platform/components/Window/Window.module.scss
+++ b/src/platform/components/Window/Window.module.scss
@@ -13,6 +13,7 @@
 
 .resize {
   position: absolute;
+  z-index: 1;
   right: -0.2rem;
   bottom: -0.2rem;
   width: 1rem;
